--- a/localstorage-demo.html
+++ b/localstorage-demo.html
@@ -10,10 +10,10 @@
     <form id="profile-form">
       <label for="name">Name : </label>
       <input name="name" type="text" id="name" />
-      <label for="city">Name : </label>
-      <input name="city" type="text" />
+      <label for="city">City : </label>
+      <input name="city" type="text" id="city" />
       <label for="age">Age : </label>
-      <input name="age" type="number" min="0" />
+      <input name="age" type="number" min="0" id="age" />
     </form>
     <script src="localstorage-demo.js"></script>
   </body>
