--- a/dom-manipulation-demo.html
+++ b/dom-manipulation-demo.html
@@ -14,6 +14,7 @@
       <input type="submit" value="Add" />
     </form>
     <ul id="task-list"></ul>
+    <button id="reset-all-done-task-btn">Clear done</button>
     <script src="dom-manipulation-demo.js"></script>
   </body>
 </html>
